<?xml version="1.0"?>
<package format="2">
  <name>rv_panda_realsense</name>
  <version>0.1.1</version>
  <description>The rv_panda_realsense package</description>

  <maintainer email="g.suddrey@qut.edu.au">Gavin Suddrey</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>

  <export>
  </export>
</package>
